[package]
name = "endure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-sys = { version = "181.0.0", features = ["prefer-dynamic"] }
inkwell = { version = "0.4.0", features = ["llvm17-0-prefer-dynamic"] }
derive-new = "0.6.0"
derive-getters = "0.4.0"
indexmap = "2.2.6"
either = "1.11.0"
ansi_term = "0.12.1"
anyhow = "1.0.84"
tokio = { version = "1.37.0", features = ["full"] }
regex = "1.10.4"
crossterm = "0.27.0"
